src/app/courses-panel/semester-panel.component.scss
.title {
    background: white;
    font-size: 19px;
    font-family: "Open Sans", sans-serif;
    border-radius: 5px;
    padding-top: 2px !important;
  }
  .semester-panel {
    background: white;
    margin-bottom: 10px;
    border: 1px solid #eee;
    border-radius: 5px;
    padding-left: 0px;
  }
  .delete {
    margin-right: 20px;
    cursor: pointer;
    font-size: 50px;
    font-weight: bold;
    color: #e1e7e9;
    width: 31px;
    height: 31px;
  }

  .cross {
    display: none;
  }

  .circle {
    width: 37px;
    height: 8px;
    display: inline-block;
    border-radius: 4px;
    position: relative;
    left: 170px;
    top: -42px;

  }

  .dropdown {
    position: static !important;
  }

  .mat-expansion-panel-header:hover .cross {
    display: block;
  }

  @media (max-width: 375px) {
    .semester-courses {
      padding-left: 5px !important;
      overflow-x: scroll;
    }
  }


  .semester-courses {
    display: flex;
    align-items: center;
    padding-left: 30px;
    width: 100%;
  }
  .courses {
    height: 120px;
  }
  .fakecourse {
    order: 99;
    width: 190px;
    height: 100px;
    border: 1px dashed;
    border-radius: 5px;
    display: flex;
    cursor: pointer;
    font-size: 15px;
    font-weight: bold;
  }
  .position-text {
    margin: auto;
  }
  .expand-semester {
    background: #eee;
    height: 100px;
    color: black;
    display: flex;
    border-radius: 0px 10px 10px 0px;
    width: 12px;
    position: absolute;
    top: 18.5%;
    left: 50%;
    cursor: pointer;
    transform: rotate(90deg);
  }
  .margin-auto {
    margin: auto;
  }

  .mat-expansion-panel-body {
    background-color: #fff;
  }

  .mat-expansion-panel-header:hover {
    background-color: #fff !important;
  }

  .mat-expansion-panel-header {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0px !important;
    height: 90px !important;
    margin-top: 13px;
    margin-bottom: 10px;
    background-color: #fff !important;

  }

  @media (max-width: 375px) { 
    .mat-expansion-panel-header {
      margin-bottom: -17px;
      height: 70px !important;
    }
  }

  .mat-expansion-panel-header-title {
    display: flex;
    min-width: 100%;
    padding: 33px;
    padding-top: 20px !important;
    height: 15px;
    pointer-events: visiblefill !important; 
    min-width: 1px !important;
  }

  @media (max-width: 375px) { 
    .mat-expansion-panel-header-title {
      padding-top: 0px !important;
      padding-bottom: 0px;
      padding-right: 33px;
      padding-left: 0px;
      margin-left: -18px !important;
    }
  }

  @media (max-width: 375px) { 
    .carousel-mobile .mat-expansion-panel-body {
      padding-top: 0px;
      padding-bottom: 0px;
      padding-right: 16px;
      padding-left: 0px;
      width: max-content;
    }
  }

  @media (max-width: 375px) { 
    .mat-content{ overflow-x: hidden;}
    .carousel-mobile .mat-expansion-panel-content {
      overflow-x: scroll !important;
      overflow-y: hidden;
    }
  }

  .title-text {
    position: static;
    padding-bottom: 0px;
    padding-left: 28px;
    display: inline-flex;
    font-size: 20px;
    font-family: "Open Sans", sans-serif;
    color: rgba(0, 0, 0, 0.87);
    transition: none !important;
  }

  .minimised-courses {
    display: flex;
    margin: 0 auto;
    column-gap: 20px;
    padding: 10px 0px;
  }

  .mat-tooltip {
      font-size: 15px !important;
  }

  .semester-select-button {
    background-color: transparent !important;
    border-width: 1px;
    border-color: transparent;
    text-align: left;
    padding-left: 0px !important;
    padding-right: 0px !important;
  }

  .semester-select-button:hover {  
    border-width: 1px;
    border-style: solid;
    border-color: #e6eaed;
    border-image: initial;
    border-radius: 5px;
  }

  .semester-select-button:active {  
    border-width: 1px;
    border-style: solid;
    border-color: #e6eaed;
    border-image: initial;
    border-radius: 5px;
  }

  .dropDownMenuSem {
    min-width: 110px;

  }

  .dropDownMenuItemSem:hover{
    background-color: #0179d3;
    color: #fff;
    cursor: pointer;
  }

  .gpa-sem {
    float: right !important;
  }

  .semCheckFail {
    text-align: center;
    font-size: 20px;
    color: red;
  }

